Implementa Collector, ClientHandler e integracao com a Main